--- a/css/main.css
+++ b/css/main.css
@@ -392,3 +392,40 @@ nav a:hover {
         page-break-after: avoid;
     }
 }
+
+
+/* Mis cambios*/
+body,html
+{
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    color: white;
+}
+
+#container
+{
+
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    /*background: blue;*/
+}
+
+#container canvas {
+    z-index: 2;
+    vertical-align: top;
+    display: block;
+    overflow: auto;
+    position: absolute;
+}
+
+#fix {
+    position: absolute;
+    z-index:1;
+    top: 0;
+    left: 0;
+    background: yellow;
+    height: 20px;
+    tex-align: center;
+}
