--- a/css/main.css
+++ b/css/main.css
@@ -425,7 +425,7 @@ body,html
     z-index:1;
     top: 0;
     left: 0;
-    background: yellow;
+    color: black;
     /*height: 20px;*/
     tex-align: center;
 
