--- a/css/main.css
+++ b/css/main.css
@@ -430,7 +430,7 @@ body,html
     tex-align: center;
 
 }
-html {
+body {
     background: url('../img/mapa.png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
