--- a/css/main.css
+++ b/css/main.css
@@ -436,4 +436,6 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+
+    background-position:center;
 }
