--- a/css/main.css
+++ b/css/main.css
@@ -428,14 +428,20 @@ body,html
     color: black;
     /*height: 20px;*/
     tex-align: center;
+    max-width:100%;
+    height:100%;
 
 }
-body {
+#fix img{
+    width:100% !important;
+    height:100% !important;
+    display:block;
+}
+/*body {
     background: url('../img/mapa.png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
+    background-size:   cover;
 
-    background-position:center;
-}
+}*/
