--- a/css/main.css
+++ b/css/main.css
@@ -437,6 +437,17 @@ body,html
     height:100% !important;
     display:block;
 }
+
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 568px)
+and (orientation : landscape) {
+    #fix img{
+        width:100% !important;
+        height:auto !important;
+        display:block;
+    }
+}
 /*body {
     background: url('../img/mapa.png') no-repeat center center fixed;
     -webkit-background-size: cover;
