--- a/css/main.css
+++ b/css/main.css
@@ -432,11 +432,7 @@ body,html
     height:100%;
 
 }
-#fix img{
-    width:100% !important;
-    height:auto !important;
-    display:block;
-}
+
 
 @media only screen
 and (min-device-width : 320px)
@@ -444,7 +440,18 @@ and (max-device-width : 568px)
 and (orientation : landscape){
     #fix img{
         width:100% !important;
-        height:100% !important;
+        height:auto !important;
+        display:block;
+    }
+}
+
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 568px)
+and (orientation : portrait) {
+    #fix img{
+        width:100% !important;
+        height:auto !important;
         display:block;
     }
 }
